ingress.yaml
# ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: $(APP_NAME)-ingress
spec:
  rules:
  - host: $(DOMAIN)
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: $(APP_NAME)-service
            port:
              number: 80
